# UniRec

./: .gitignore  .ruff.toml  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
.github/: ci_cd_workflow.yml
docks/: ml_sys_doc.md
infrastructure/kafka/: Dockerfile  docker-compose.yml  kafka.properties
infrastructure/zookeeper/: Dockerfile
orchestration/airflow_dags/: Dockerfile  data_processing_dag.py
orchestration/mlflow/: Dockerfile
src/api_adapters/tg_adapter/: .env-example  .gitignore  Dockerfile  docker-compose.yml  requirements.txt  src.py
src/core_server/: .env-example  main.py  requirements.txt
src/core_server/api_adapters/: tg_adapter.py
src/core_server/ml/: llm_handler.py  worker.py
src/data/: .gitignore  transformed_data.dvc
src/ml_pipeline/: llm_client.py  llm_handler.py  requirements.txt  server.py  worker.py
src/ui/front/: index.html
src/ui/temp_broker/: client.py  requirements.txt  server.py
src/ui/ws/: .env-example  broker.py  requirements.txt  src.py
